--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <title>Document</title>
 </head>
 <body>
-  <p>Testing</p>
+  <picture><img src="./img/Screenshot (2).png" alt="test"></picture>
 </body>
 </html>
