--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/index.scss">
-  <script src="./js/index.ts" defer></script>
+  <script type="module" src="./js/index.ts"></script>
   <title>Document</title>
 </head>
 <body>
-  <picture><img src="./img/Screenshot (2).png" alt="test"></picture>
+  <picture><img class="lazy" data-src="./img/Screenshot (2).png" alt="test"></picture>
 </body>
 </html>
