--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <title>Document</title>
 </head>
 <body>
-  <picture><img class="lazy" data-src="./img/Screenshot (2).png" alt="test"></picture>
+  <picture>
+    <img class="lazy" data-src="./img/Screenshot (2).png" alt="test">
+  </picture>
 </body>
 </html>
