--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.scss">
-  <script type="module" src="./js/index.ts"></script>
+  <link rel="stylesheet" href="/src/css/index.scss">
+  <script type="module" src="/src/js/index.ts"></script>
   <title>Document</title>
 </head>
 <body>
   <picture>
-    <img class="lazy" data-src="./img/Screenshot (2).png" alt="test">
+    <img class="lazy" src="/src/img/Screenshot.png" alt="test" loading="lazy">
   </picture>
 </body>
 </html>
