--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/css/index.scss">
-  <script type="module" src="/src/js/index.ts"></script>
+  <script src="/src/js/index.js"></script>
   <title>Document</title>
 </head>
 <body>
