--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/css/index.scss">
-  <script src="/src/js/index.js"></script>
+  <script type="module" src="/src/js/index.ts"></script>
   <title>Document</title>
 </head>
 <body>
   <picture>
-    <img class="lazy" src="/src/img/Screenshot.png" alt="test" loading="lazy">
+    <img id="test" class="lazy" src="/src/img/Screenshot.png" alt="test" loading="lazy">
   </picture>
 </body>
 </html>
