--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/css/index.scss">
   <title>Document</title>
+  <script type="module" src="/src/js/index.ts"></script>
 </head>
 <body>
-  <picture>
-    <img id="test" class="lazy" src="/src/img/Screenshot.png" alt="test" loading="lazy">
-  </picture>
-  <script type="module" src="/src/js/index.ts"></script>
+  <!-- <picture>
+    <img id="test" class="lazy" src="/src/img/Screenshot1.png" alt="test" loading="lazy">
+  </picture> -->
+
+  <div id="images">
+    
+  </div>
 </body>
 </html>
