--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <picture>
-    <img id="test" class="lazy" src="/src/img/Screenshot1.png" alt="test" loading="lazy">
-  </picture> -->
+  <picture>
+    <img id="test" class="lazy" src="/xxx/xx/xx.png" alt="test" loading="lazy">
+  </picture>
   
   <div id="images">
     
