added latest postcss, new plugins

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,22 @@
   <title>Document</title>
 </head>
 <body>
-  <picture>
+  <section>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+  </section>
+  <!-- <picture>
     <img id="test" class="lazy" src="/xxx/xx/xx.png" alt="test" loading="lazy">
   </picture>
   
   <div id="images">
     
-  </div>
+  </div> -->
   <script type="module" src="/src/js/index.ts"></script>
 </body>
 </html>
