--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-  <section>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div>
-    <div>7</div>
+  <section class="grid">
+    <div class="cell-a">1</div>
+    <div class="cell-b">2</div>
+    <div class="cell-c">3</div>
+    <div class="cell-d">4</div>
+
   </section>
   <!-- <picture>
     <img id="test" class="lazy" src="/xxx/xx/xx.png" alt="test" loading="lazy">
