--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/common/index.css">
+  <link rel="stylesheet" href="/column/css/common/r_common.css">
+  <link href="/css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="/src/css/index.scss">
   <title>Document</title>
 </head>
